# academialens-ai

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.mjs  tailwind.config.ts  vitest.config.ts
.imdone/: config.yml  tags.yml
.imdone/actions/: board.js
.imdone/properties/: board.js  card.js
.imdone/templates/: user_story.md
.storybook/: main.ts  preview-head.html  preview.js
backend/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7108734c05fc_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py  login.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  token.py  user.py
docs/: README.md
docs/components/: feedback-components.md  navigation-components.md
public/: globals-storybook.css  globals.css
public/plans/: AI_Task_Tracker.md  AcademiaLens_ Comprehensive Implementation Plan.md  AcademiaLens_Task_Tracker.md  AcademiaLens_Task_Tracker_V2.md  Backend Implementation Tasks (AcademiaLens).md  Frontend Implementation Tasks (AcademiaLens).md  Other Development Tasks (AcademiaLens).md
public/plans/.imdone/: config.yml
public/plans/.imdone/actions/: card.js
public/plans/backlog/: #-AcademiaLens---Project-Task-Tracker.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/forgot-password/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/reset-password/: page.tsx
src/app/(auth)/reset-password-email-sent/: page.tsx
src/app/(auth)/reset-password-success/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(auth)/verify-email/: page.tsx
src/app/(auth)/verify-email-sent/: page.tsx
src/app/(dashboard)/: layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/profile/: page.tsx
src/app/dashboard/settings/: page.tsx
src/app/test/: page.tsx
src/components/: ThemeToggle.tsx  icons.tsx  index.ts
src/components/account/: ChangePasswordForm.tsx  NotificationPreferencesForm.tsx  UpdateProfileForm.tsx
src/components/auth/: AuthOverlayCard.tsx  ForgotPasswordDialog.tsx  InfoDialog.tsx  ProtectedRoute.tsx  terms-links.tsx
src/components/dashboard/: document-list.tsx  document-upload.tsx
src/components/examples/: signup-form.tsx
src/components/ui/: Button.tsx  toast.tsx  toaster.tsx
src/components/ui/alert/: alert.tsx
src/contexts/: AuthContext.tsx
src/lib/: apiClient.ts  utils.ts
src/store/: userStore.ts
src/stories/: Button.stories.ts  alert.stories.tsx  breadcrumb.stories.tsx  card.stories.tsx  checkbox.tsx  combobox.stories.tsx  dialog.stories.tsx  dropdown-menu.stories.tsx  form.stories.tsx  navigation-menu.stories.tsx  pagination.stories.tsx  popover.stories.tsx  progress.stories.tsx  radio-group.stories.tsx  skeleton.stories.tsx  switch.stories.tsx  table.stories.tsx  tabs.stories.tsx  toast.stories.tsx  tooltip.stories.tsx
(+27 files in other folders)
